# zaka-object-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
model/: model.py
templates/: index.html  index.j2
